--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
+    "react-carousel": "^4.3.0",
     "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.1",
     "react-youtube": "^10.1.0",
     "sass": "^1.83.1"
