--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-carousel": "^4.3.0",
     "react-dom": "^18.3.1",
