--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_API_BASE_URL=https://inspireshare-d06d7caff3c9.herokuapp.com
-VITE_API_BASE_URL= https://localhost:7000 
+VITE_API_BASE_URL=https://inspireshare-d06d7caff3c9.herokuapp.com
+# VITE_API_BASE_URL= https://localhost:7000 
